Search title and style fixes

--- a/style/_heading.scss
+++ b/style/_heading.scss
@@ -15,12 +15,11 @@
 /* Location */
 .ola-location-notify {
   padding-top: 0.5rem;
+  font-size: 16px;
 
   .ola-link-geo {
+    font-size: 16px;
     margin-left: 1rem;
     vertical-align: baseline;
-  }
-  .ola-link-geo-active {
-    
   }
 }
