Add swipeable support to search results

--- a/style/_buttons.scss
+++ b/style/_buttons.scss
@@ -123,6 +123,7 @@
   margin-top: 1rem;
   box-shadow: $small-box-shadow;
   border: none;
+  white-space: nowrap;
 
   .ola-icon {
     vertical-align: middle;
