--- a/style/_buttons.scss
+++ b/style/_buttons.scss
@@ -186,8 +186,7 @@
 .ola-btn-close {
   position: absolute;
   right: 12px;
-  top: 50%;
-  margin-top: -9px;
+  top: 12px;
   padding: 2px;
   width: 18px;
   height: 18px;
