--- a/style/_shared.scss
+++ b/style/_shared.scss
@@ -1,3 +1,14 @@
 .ola-js-hide {
   display: none;
 }
+
+/**
+ * Margin
+ */
+.ola-push-top {
+  margin-top: 1rem;
+}
+
+.ola-pad-top {
+  padding-top: 1rem;
+}
