--- a/style/_sidebar.scss
+++ b/style/_sidebar.scss
@@ -62,6 +62,7 @@
     .ola-search-filters {
       flex: 1;
       overflow: auto;
+      @extend %scroll;
       padding: 16px;
     }
   }
@@ -74,6 +75,7 @@
   line-height: 1;
   border-bottom: 1px #ccc solid;
   display: none;
+  font-weight: bold;
 
   .ola-search-tablet &, .ola-search-mobile & {
     display: block;
