--- a/style/_swipeable.scss
+++ b/style/_swipeable.scss
@@ -64,7 +64,7 @@
   .ola-swipeable-item-inner {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex: 1 1 auto;
     justify-content: center;
   }
 
