--- a/style/_fields.scss
+++ b/style/_fields.scss
@@ -126,6 +126,11 @@ $image-height: 150px;
   margin: 0;
   padding: 0 0 $field-title-bottom-padding 0;
   font-weight: normal;
+
+  .ola-field {
+    padding: 0;
+    margin: 0;
+  }
   
   > a {
     text-decoration: none;
