--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -96,8 +96,8 @@
     // line-height: 1.15; /* 1 */
     // margin: 0; /* 2 */
     // font-family: sans-serif; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1; /* 1 */
+    // font-size: 100%; /* 1 */
+    // line-height: 1; /* 1 */
     // margin: 0; /* 2 */
   }
 
