Added answer video

--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -204,7 +204,7 @@
  * Answer header
  */
 .ola-answer-header {
-  padding: 8px 0;
+  padding: 0 0 8px 0;
   flex: 1;
   // &:first-child {
   //   padding-top: 0;
