Support for iframe embed

--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -249,3 +249,14 @@
     top: auto;
   }
 }
+
+
+/**
+ * Embed card
+ */
+.ola-card-template-embed {
+  display: inline-block;
+  .ola-answer-body {
+    position: relative;
+  }
+}
