--- a/style/_buttons.scss
+++ b/style/_buttons.scss
@@ -232,7 +232,8 @@
  */
 .ola-btn-play {
   @extend .ola-btn;
-  background: rgba(255,255,255,0.6);
+  // background: rgba(255,255,255,0.6);
+  background: rgba(0,0,0,0.8);
   width: 80px;
   height: 80px;
   color: white;
@@ -242,7 +243,7 @@
   transition: all 0.2s ease-in;
 
   &:focus, &:hover {
-    background: rgba(255,255,255,0.2);
+    background: rgba(0,0,0,0.5);
   }
 
   .ola-answer-embed & {
