--- a/style/_pagination.scss
+++ b/style/_pagination.scss
@@ -58,11 +58,11 @@
    */
 
   .ola-page-previous{
-    margin-right: 1em;
+    margin-right: 1rem;
   }
 
   .ola-page-next{
-    margin-left: 1em;
+    margin-left: 1rem;
     .ola-icon {
       margin-right: 0;
       margin-left: 0.25rem;  
