--- a/style/_swipeable.scss
+++ b/style/_swipeable.scss
@@ -98,7 +98,7 @@
   .ola-swipeable:hover & {
     opacity: 1;
     background: white;
-    color: $link-color;
+    // color: $link-color;
   }
 
   &, &:focus {
