--- a/style/_form.scss
+++ b/style/_form.scss
@@ -33,7 +33,8 @@
   cursor: pointer;
 
   input {
-    margin: 3px 0 0 0;
+    margin: 0;
+    // margin: 3px 0 0 0;
     appearance: checkbox;
   }
 
