--- a/style/_pill.scss
+++ b/style/_pill.scss
@@ -1,8 +1,9 @@
 .ola-btn-pill {
   border-radius: $pill-border-radius;
   background: $pill-background;
+  border: none;
   padding: $pill-padding;
   color: $pill-color;
-  display: inline-block;
+  display: inline-flex;
   margin: 0 4px 4px 0;
 }
