--- a/style/_sidebar.scss
+++ b/style/_sidebar.scss
@@ -106,7 +106,7 @@
   position: relative;
   margin: 0 0 0 5px;
   height: auto;
-  min-height: $button-default-height;
+  // min-height: $button-default-height;
 
   & {
   color: $brand-color;
