--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -82,9 +82,9 @@
     width: 100%;
     margin: 0 0 8px 0;
     // @include media (desktop) {
-      margin: 0 4px 8px 4px;
-      width: auto;
-      flex: 1;
+    margin: 0 4px 8px 4px;
+    width: auto;
+    // flex: 1;
     // }
 
     &:last-child {
