Fix autosuggest bug

--- a/style/_pagination.scss
+++ b/style/_pagination.scss
@@ -47,6 +47,10 @@
     }
   }
 
+  .ola-page-text {
+    vertical-align: middle;
+  }
+
   .ola-page-ellipsis{
     cursor: text;
     margin-left: 1px;
