--- a/style/_heading.scss
+++ b/style/_heading.scss
@@ -2,11 +2,12 @@
   border-bottom: 2px solid #e5e5e5;
   display: flex;
   align-items: flex-start;
+  padding: 0 0 1rem 0;
   margin: 0 0 1rem 0;
 }
 
 .ola-search-heading-container {  
-  padding: 0 1rem 0 0;  
+  padding: 0 0 0 0;  
   display: flex;
   flex: 1;
   align-items: flex-end;
