More doc updates

--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -36,7 +36,7 @@
 
   a {
     // background-color: transparent; /* 1 */
-    -webkit-text-decoration-skip: objects; /* 2 */
+    // -webkit-text-decoration-skip: objects; /* 2 */
     // color: $link-color;
 
     &:hover {
