Added styleguide docs

--- a/style/_contenteditable.scss
+++ b/style/_contenteditable.scss
@@ -11,6 +11,7 @@
   z-index: 1;
   font-family: inherit;
   border: none;
+  background-color: transparent;
   &:focus {
     outline: none;
     border: none;
