Style + Add sorting to select filter

--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -155,7 +155,7 @@
  * Table
  */
 .ola-table {
-  background-color: white;
+  // background-color: white;
   border-top: none;
   margin: 0 0 16px 0;
   width: 100%;
@@ -178,7 +178,7 @@
 
 .ola-table-wrapper {
   overflow: auto;
-  background-color: #fff;
+  // background-color: #fff;
 }
 
 /**
