--- a/style/_heading.scss
+++ b/style/_heading.scss
@@ -6,6 +6,10 @@
   margin: 0 0 1rem 0;
 }
 
+.ola-search-heading-number {
+  font-size: 1rem;
+}
+
 .ola-search-heading-container {  
   padding: 0 0 0 0;  
   display: flex;
