--- a/style/_form.scss
+++ b/style/_form.scss
@@ -32,7 +32,7 @@
   font-weight: normal;
   cursor: pointer;
 
-  input {
+  input, input[type='checkbox'] {
     margin: 0;
     // margin: 3px 0 0 0;
     appearance: checkbox;
