--- a/style/_visualization.scss
+++ b/style/_visualization.scss
@@ -25,3 +25,17 @@
   height: 300px;
   margin: 1rem;
 }
+
+/**
+ * Cards
+ */
+.ola-viz-card-wrapper {
+  padding: 1rem;
+  background: white;
+  box-shadow: $sharp-box-shadow;
+  border-radius: 5px;
+}
+
+  .ola-viz-card {
+    margin-bottom: 1rem;
+  }
