--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -84,7 +84,7 @@
     // @include media (desktop) {
     margin: 0 4px 8px 4px;
     width: auto;
-    // flex: 1;
+    flex: 1; /* Make the button 100% wide */
     // }
 
     &:last-child {
