--- a/style/_fields.scss
+++ b/style/_fields.scss
@@ -243,6 +243,13 @@ $image-height: 150px;
     justify-content: center;
   }
 
+  /**
+   * justify right
+   */
+  .ola-justify-right {
+    justify-content: flex-end;
+  }
+
 /**
  * Small fields
  */
