--- a/style/_visualization.scss
+++ b/style/_visualization.scss
@@ -34,11 +34,18 @@
   background: white;
   box-shadow: $sharp-box-shadow;
   border-radius: 5px;
+  flex: 1;
+  // display: flex;
+  // flex-direction: column;
 }
 
   .ola-viz-card {
     margin-bottom: 1rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
   }
+
 
 /**
  * Dashboard
@@ -47,14 +54,29 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 -1rem;
-  padding: 1rem 0;
+  padding: 0rem 0 1rem 0;
 }
 
   .ola-viz-item {
     flex: 1;
+    display: flex;
+    flex-direction: column;
     min-width: 40%;
   }
 
   .ola-viz-item-inner {
     padding: 1rem 1rem 0 1rem;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
   }
+
+
+/**
+ * Select box
+ */
+
+.ola-viz-select {
+  justify-content: flex-end;
+  padding: 0;
+}
