--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -279,51 +279,33 @@
 }
 
 /**
-  * Article
-  */
+ * List list
+ */
+.ola-linklist-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 0 0 1rem 0;
+}
+
+/**
+ * Article
+ */
 .ola-answer-article {
-  display: flex;
-  flex-direction: row;
-}
-
-/**
-  * Article side bar
-  */
-.ola-answer-article-aside {
-  display: flex;
-  width: 100%;
-  max-width: 188px;
-  flex-direction: column;
-  margin-right: 1rem;
-}
-
-/**
-  * Article side bar's authors section
-  */
-.ola-answer-article-authors {
-  display: flex;
-  flex-direction: column
-}
-
-/**
-  * Article side bar's info section
-  */
-.ola-answer-article-info {
-  margin-bottom: 1rem;
+  .ola-answer-subtitle {
+    font-size: 1.2rem;    
+  }
+  .ola-answer-header {
+    padding-bottom: 1rem;
+  }
+  .ola-field-content {
+    padding-bottom: 2rem;
+  }
 }
 
 /**
   * Article side bar's image
   */
 .ola-answer-article-image {
-  width: 100%;
-}
-
-/**
-  * Article side bar's related articles section
-  */
-.ola-answer-article-related-articles {
-  padding-top: 1rem;
-  display: flex;
-  flex-direction: column;
+  max-width: 100%;
+  margin: 0 0 1rem 0;
 }
