--- a/style/core.scss
+++ b/style/core.scss
@@ -11,7 +11,7 @@
 // @import 'hint';
 @import 'datepicker';
 @import 'slider';
-
+@import 'flex';
 @import 'fields';
 @import 'form';
 @import 'sidebar';
