--- a/style/_visualization.scss
+++ b/style/_visualization.scss
@@ -54,7 +54,7 @@
   @include media (tablet) {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 -1rem;
+    margin: 0rem;
     padding: 0rem 0 1rem 0;
   }
 }
