Modified default color of chart tooltip

--- a/style/_chart.scss
+++ b/style/_chart.scss
@@ -204,12 +204,12 @@
 }
 .bb-tooltip th {
   border: none;
-  background: #00aba2;
+  background: #2b8cbe;
   font-weight: normal;
 }
 .bb-tooltip td {
   border-width: 0 0 0 1px;
 }
 .bb-tooltip tr {
-  border: 1px darken(#00aba2, 10%) solid;
+  border: 1px darken(#2b8cbe, 10%) solid;
 }
