Add autohiding scrollbar in IE 11

--- a/style/_facet.scss
+++ b/style/_facet.scss
@@ -130,7 +130,8 @@
    */
   .ola-facet-scroll-list {
     max-height: none;
-    overflow: overlay;
+    overflow: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
   }
 
 
